# taler-exchange

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bootstrap  configure  configure.ac  taler_config.h.in  uncrustify.cfg
contrib/: Makefile.am  Makefile.in  auditor-report.tex.j2  gana-update.sh  gana.sh  gnunet.tag  microhttpd.tag  taler-bank-manage-testing  taler-nexus-prepare  uncrustify-mode.el
contrib/exchange-template/: README
contrib/nix/: default.nix  taler-exchange-dev.nix
contrib/pp/: README  conf.py  pp.rst
contrib/samples/: README  auditor.json  wire-auditor.json
contrib/tos/: Makefile  tos.rst
doc/: .gitignore  Makefile.am  Makefile.in
doc/audit/: response-202005.tex  response-202012.tex
doc/doxygen/: .gitignore  Makefile.am  Makefile.in  taler.doxy
doc/paper/: blinding_prng.txt  offline.tex  postquantum.tex  rom.bib  taler.bib  taler.tex  taler_FC2016.txt  taler_FC2017.txt
doc/prebuilt/: .gitignore
doc/system/: .gitignore  abstract.tex  acknowledgements.tex  conclusions.tex  cryptocode.sty  introduction.tex  ref.bib  system.tex
src/: .gitignore  Makefile.am  Makefile.in  taler.conf
src/auditor/: .gitignore  Makefile.am  Makefile.in  auditor-basedb.age  auditor-basedb.fees  auditor-basedb.mpub  auditor-basedb.sql  auditor.conf  generate-auditor-basedb-template.conf  generate-auditor-basedb.conf  generate-auditor-basedb.sh  generate-revoke-basedb.sh  report-lib.c  report-lib.h  revoke-basedb.age  revoke-basedb.fees  revoke-basedb.mpub  revoke-basedb.sql  taler-auditor-dbinit.c  taler-auditor-exchange.c  taler-auditor-httpd.c  taler-auditor-httpd.h  taler-auditor-httpd_deposit-confirmation.c  taler-auditor-httpd_deposit-confirmation.h  taler-auditor-httpd_exchanges.c  taler-auditor-httpd_exchanges.h  taler-auditor-httpd_mhd.c  taler-auditor-httpd_mhd.h  taler-auditor-sync.c  taler-auditor.in  taler-helper-auditor-aggregation.c  taler-helper-auditor-coins.c  taler-helper-auditor-deposits.c  taler-helper-auditor-render.py  taler-helper-auditor-reserves.c  taler-helper-auditor-wire.c  test-auditor.conf  test-auditor.sh  test-revocation.sh  test-sync-in.conf  (+2 more)
src/auditordb/: .gitignore  9999.sql  Makefile.am  Makefile.in  auditor-0001.sql  auditordb-postgres.conf  auditordb_plugin.c  drop0001.sql  plugin_auditordb_postgres.c  restart0001.sql  test-auditor-db-postgres.conf  test_auditordb.c
src/bank-lib/: .gitignore  Makefile.am  Makefile.in  bank_api_admin.c  bank_api_common.c  bank_api_common.h  bank_api_credit.c  bank_api_debit.c  bank_api_parse.c  bank_api_transfer.c  fakebank.c  taler-fakebank-run.c  taler-wire-gateway-client.c
src/benchmark/: Makefile.am  Makefile.in  benchmark.conf  taler-exchange-benchmark.c
src/curl/: Makefile.am  Makefile.in  curl.c
src/exchange/: .gitignore  Makefile.am  Makefile.in  exchange.conf  taler-exchange-aggregator.c  taler-exchange-closer.c  taler-exchange-httpd.c  taler-exchange-httpd.h  taler-exchange-httpd_auditors.c  taler-exchange-httpd_auditors.h  taler-exchange-httpd_db.c  taler-exchange-httpd_db.h  taler-exchange-httpd_deposit.c  taler-exchange-httpd_deposit.h  taler-exchange-httpd_deposits_get.c  taler-exchange-httpd_deposits_get.h  taler-exchange-httpd_keys.c  taler-exchange-httpd_keys.h  taler-exchange-httpd_link.c  taler-exchange-httpd_link.h  taler-exchange-httpd_loop.c  taler-exchange-httpd_loop.h  taler-exchange-httpd_management.h  taler-exchange-httpd_management_auditors.c  taler-exchange-httpd_management_auditors_AP_disable.c  taler-exchange-httpd_management_denominations_HDP_revoke.c  taler-exchange-httpd_management_post_keys.c  taler-exchange-httpd_management_signkey_EP_revoke.c  taler-exchange-httpd_management_wire.c  taler-exchange-httpd_management_wire_disable.c  taler-exchange-httpd_management_wire_fees.c  taler-exchange-httpd_melt.c  taler-exchange-httpd_melt.h  taler-exchange-httpd_mhd.c  taler-exchange-httpd_mhd.h  taler-exchange-httpd_recoup.c  taler-exchange-httpd_recoup.h  taler-exchange-httpd_refreshes_reveal.c  taler-exchange-httpd_refreshes_reveal.h  taler-exchange-httpd_refund.c  (+22 more)
src/exchange-tools/: .gitignore  Makefile.am  Makefile.in  coins.conf  exchange-offline.conf  taler-auditor-offline.c  taler-exchange-dbinit.c  taler-exchange-offline.c
src/exchangedb/: .gitignore  Makefile.am  Makefile.in  drop0001.sql  drop0002.sql  exchange-0001.sql  exchange-0002.sql  exchangedb-postgres.conf  exchangedb.conf  exchangedb_accounts.c  exchangedb_plugin.c  exchangedb_transactions.c  irbt_callbacks.c  lrbt_callbacks.c  plugin_exchangedb_common.c  plugin_exchangedb_postgres.c  test-exchange-db-postgres.conf  test_exchangedb.c
src/include/: Makefile.am  Makefile.in  backoff.h  gauger.h  platform.h  taler_amount_lib.h  taler_auditor_service.h  taler_auditordb_lib.h  taler_auditordb_plugin.h  taler_bank_service.h  taler_crypto_lib.h  taler_curl_lib.h  taler_error_codes.h  taler_exchange_service.h  taler_exchangedb_lib.h  taler_exchangedb_plugin.h  taler_fakebank_lib.h  taler_json_lib.h  taler_mhd_lib.h  taler_pq_lib.h  taler_signatures.h  taler_sq_lib.h  taler_testing_lib.h  taler_twister_testing_lib.h  taler_util.h
src/json/: .gitignore  Makefile.am  Makefile.in  i18n.c  json.c  json_helper.c  json_wire.c  test_json.c  test_json_wire.c
src/lib/: Makefile.am  Makefile.in  auditor_api_curl_defaults.c  auditor_api_curl_defaults.h  auditor_api_deposit_confirmation.c  auditor_api_exchanges.c  auditor_api_handle.c  auditor_api_handle.h  exchange_api_auditor_add_denomination.c  exchange_api_common.c  exchange_api_curl_defaults.c  exchange_api_curl_defaults.h  exchange_api_deposit.c  exchange_api_deposits_get.c  exchange_api_handle.c  exchange_api_handle.h  exchange_api_link.c  exchange_api_management_auditor_disable.c  exchange_api_management_auditor_enable.c  exchange_api_management_get_keys.c  exchange_api_management_post_keys.c  exchange_api_management_revoke_denomination_key.c  exchange_api_management_revoke_signing_key.c  exchange_api_management_set_wire_fee.c  exchange_api_management_wire_disable.c  exchange_api_management_wire_enable.c  (+11 more)
(+290 files in other folders)
